First steps for implementing staffAuth.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,36 +20,5 @@
 #   2015 Alexander Haase IT Services <support@alexhaase.de>
 #
 
-
-# minimum required cmake version
-cmake_minimum_required(VERSION 2.8.11)
-
-
-#
-# project information
-#
-if (${CMAKE_MAJOR_VERSION} EQUAL 3)
-	project("staffAuth" LANGUAGES C CXX)
-else ()
-	project("staffAuth" C)
-endif ()
-
-
-# choose new behaviour for CMP0042
-# see http://www.cmake.org/cmake/help/v3.0/policy/CMP0042.html for more details
-if (POLICY CMP0042)
-	cmake_policy(SET CMP0042 NEW)
-endif (POLICY CMP0042)
-
-
-#
-# cmake configuration
-#
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
-
-
-#
 # recurse into subdirectories
-#
-add_subdirectory(doc)
-add_subdirectory(src)
+add_subdirectory(libmaintain)
