Added first implementation for nsswitch module.
Currently this module only prints some dummy data for user adm_test.

--- a/src/libnss_mauth/CMakeLists.txt
+++ b/src/libnss_mauth/CMakeLists.txt
@@ -20,6 +20,7 @@
 #   2015 Alexander Haase IT Services <support@alexhaase.de>
 #
 
-# recurse into subdirectories
-add_subdirectory(libmauth)
-add_subdirectory(libnss_mauth)
+# build library
+add_library(nss_mauth SHARED
+	passwd.c
+)
