--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: c
 compiler:
   - gcc
   - clang
-before_install:
-  - sudo apt-get install libc6-dev
+
+addons:
+  apt:
+    packages:
+      - libc6-dev
+
 script:
   - mkdir build && cd build
   - cmake ..
