Reworked libmauth/is_staff.c
- Reworked logic in mauth_is_staff().
- Added dynamic configuration for user prefix and uid range.
- Added test-case for mauth_is_staff().
- Added code coverage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,8 @@ script:
   - mkdir build && cd build
   - cmake ..
   - make
+  - make test
+
+after_success:
+  - make gcov
+  - bash <(curl -s https://codecov.io/bash)
