--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "externals/useLATEX"]
 	path = externals/useLATEX
 	url = https://github.com/kmorel/UseLATEX.git
+[submodule "externals/cmake-codecov"]
+	path = externals/cmake-codecov
+	url = git://github.com/alehaa/cmake-codecov.git
