--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 
 script:
   - mkdir build && cd build
-  - cmake ..
+  - cmake .. -DENABLE_COVERAGE=On -DENABLE_TESTS=On
   - make
   - make test
 
