--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@
 
 
 # minimum required cmake version
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.8)
 
 
 #
@@ -47,6 +47,7 @@ endif (POLICY CMP0042)
 #
 set(CMAKE_MODULE_PATH
 	"${CMAKE_SOURCE_DIR}/externals/cmake-codecov/cmake"
+	"${CMAKE_SOURCE_DIR}/externals/CMake-easylib/cmake"
 	"${CMAKE_SOURCE_DIR}/externals/UseLATEX"
 	${CMAKE_MODULE_PATH}
 )
