--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ addons:
 
 script:
   - mkdir build && cd build
-  - cmake .. -DENABLE_COVERAGE=On -DENABLE_TESTS=On
-  - make
-  - make test
+  - cmake .. -DENABLE_COVERAGE=On -DENABLE_TESTS=On && make && make test
 
 after_success:
   - make gcov
