Added functions to validate group name + gid.
Added functions mauth_validate_grnam + *_grgid and changed function signatures
of mauth_valid_* to those of get*(nam/id). Removed const for functions were it
does not make any sense.

--- a/src/libmauth/CMakeLists.txt
+++ b/src/libmauth/CMakeLists.txt
@@ -25,6 +25,10 @@ set(MAUTH_UIDMAP_MIN "65537" CACHE STRING "Minimum UID for mauth users.")
 set(MAUTH_UIDMAP_MAX "99999" CACHE STRING "Maximum UID for mauth users.")
 set(MAUTH_USER_PREFIX "adm_" CACHE STRING "Prefix for mauth users.")
 
+set(MAUTH_GIDMAP_MIN "65537" CACHE STRING "Minimum GID for mauth groups.")
+set(MAUTH_GIDMAP_MAX "99999" CACHE STRING "Maximum GID for mauth groups.")
+set(MAUTH_GROUP_PREFIX "adm_" CACHE STRING "Prefix for mauth groups.")
+
 # configure config.h
 configure_file(config.h.in config.h)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
