--- a/src/libmauth/config.h.in
+++ b/src/libmauth/config.h.in
@@ -27,3 +27,7 @@
 #define MAUTH_UIDMAP_MIN @MAUTH_UIDMAP_MIN@
 #define MAUTH_UIDMAP_MAX @MAUTH_UIDMAP_MAX@
 #define MAUTH_USER_PREFIX "@MAUTH_USER_PREFIX@"
+
+#define MAUTH_GIDMAP_MIN @MAUTH_GIDMAP_MIN@
+#define MAUTH_GIDMAP_MAX @MAUTH_GIDMAP_MAX@
+#define MAUTH_GROUP_PREFIX "@MAUTH_GROUP_PREFIX@"
