--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,9 @@ endif (POLICY CMP0042)
 #
 # cmake configuration
 #
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH
+	"${CMAKE_SOURCE_DIR}/externals/useLATEX"
+	${CMAKE_MODULE_PATH})
 
 
 #
