Outsourced cURL requests.

--- a/src/keys/CMakeLists.txt
+++ b/src/keys/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories(${CURL_INCLUDE_DIRS} ${JSON-C_INCLUDE_DIR})
 add_executable(staffauth-keys
 	config_cmdargs.c
 	config_conffile.c
+	request.c
 	keys.c)
 
 target_link_libraries(staffauth-keys ${CURL_LIBRARIES} ${JSON-C_LIBRARY})
