--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ addons:
       - kalakris-cmake
     packages:
       - cmake
-      - libcurl-dev
+      - libcurl4-openssl-dev
       - libjson-c-dev
 
 
