Added an alternative open_memstream implementation.
open_memstream is available at recent GNU/Linux platforms only. To be compa-
tible with older Linux platforms, BSD and OSX (Darwin), an alternative mem-
stream implementation might be used on these platforms.

--- a/src/keys/CMakeLists.txt
+++ b/src/keys/CMakeLists.txt
@@ -30,7 +30,9 @@ add_executable(staffauth-keys
 	config_cmdargs.c
 	config_conffile.c
 	request.c
-	keys.c)
+	keys.c
+	memstream.c
+)
 
 target_link_libraries(staffauth-keys ${CURL_LIBRARIES} ${JSON-C_LIBRARY})
 
