Configuration will be read per user.
mauth-keys will look for a file named <user>.conf in PREFIX/etc/mauth/users.d,
which contains the server configuration. If no file for the requested user is
available, mauth-keys will fail silently.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
         - brew update --quiet >& /dev/null
         - brew outdated cmake || brew upgrade cmake
         - brew outdated json-c || brew upgrade json-c
+        - brew install libconfig
 
 addons:
   apt:
@@ -35,6 +36,7 @@ addons:
       - cmake
       - libcurl4-openssl-dev
       - libjson-c-dev
+      - libconfig-dev
 
 
 script:
