--- a/src/keys/CMakeLists.txt
+++ b/src/keys/CMakeLists.txt
@@ -22,9 +22,18 @@
 find_package(Sanitizers)
 find_package(CURL REQUIRED)
 find_package(JSON-C REQUIRED)
+find_package(Libconfig REQUIRED)
 
 
-include_directories(${CURL_INCLUDE_DIRS} ${JSON-C_INCLUDE_DIR})
+# Configure files
+configure_file(cmake-config.h.in cmake-config.h)
+
+
+include_directories(
+	${CURL_INCLUDE_DIRS}
+	${JSON-C_INCLUDE_DIR}
+	${CMAKE_CURRENT_BINARY_DIR}
+)
 
 add_executable(mauth-keys
 	config_cmdargs.c
@@ -34,7 +43,11 @@ add_executable(mauth-keys
 	memstream.c
 )
 
-target_link_libraries(mauth-keys ${CURL_LIBRARIES} ${JSON-C_LIBRARY})
+target_link_libraries(mauth-keys
+	${CURL_LIBRARIES}
+	${JSON-C_LIBRARY}
+	${LIBCONFIG_LIBRARY}
+)
 
 add_coverage(mauth-keys)
 add_sanitizers(mauth-keys)
