--- a/.travis.yml
+++ b/.travis.yml
@@ -6,27 +6,6 @@ matrix:
       dist: trusty
       sudo: required
       compiler: gcc
-    - os: linux
-      dist: trusty
-      sudo: required
-      compiler: clang
-
-    - os: linux
-      dist: trusty
-      sudo: required
-      compiler: clang
-      env: SANITIZER=MEMORY
-      script:
-        - mkdir travis && cd travis
-        - cmake .. -DCMAKE_INSTALL_PREFIX=../install -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=On -DSANITIZE_MEMORY=On -DSANITIZE_UNDEFINED=On && make install
-
-    - os: osx
-      compiler: clang
-      before_install:
-        - brew update --quiet >& /dev/null
-        - brew outdated cmake || brew upgrade cmake
-        - brew outdated json-c || brew upgrade json-c
-        - brew install libconfig
 
 addons:
   apt:
@@ -37,12 +16,11 @@ addons:
       - libcurl4-openssl-dev
       - libjson-c-dev
       - libconfig-dev
+      - dpkg-dev
+      - debhelper
+      - lintian
 
 
 script:
-  - mkdir travis && cd travis
-  - cmake .. -DCMAKE_INSTALL_PREFIX=../install -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=On -DSANITIZE_ADDRESS=On -DSANITIZE_UNDEFINED=On && make install
-
-after_success:
-  - make -k gcov
-  - bash <(curl -s https://codecov.io/bash) -X gcov
+  - dpkg-buildpackage -us -uc && cd ..
+  - lintian *.deb
