Fixed lintian warnings.
* binary packages were empty
* shlibs could not be found (because binary packages were empty)
* section and priority of mauth-openssh-dbg were wrong

--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,8 @@ Description: Mauth API framework - openssh integration.
 
 Package: mauth-openssh-dbg
 Architecture: any
-Section: admin
-Priority: optional
+Section: debug
+Priority: extra
 Depends: mauth-openssh (= ${binary:Version})
 Description: Mauth API framework - openssh integration.
  mauth is an authentication API for authenticating external employees at
