Added more compatibility for predefined paths.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,5 +19,19 @@
 #   2015-2016 Alexander Haase IT Services <support@alexhaase.de>
 #
 
+# Set some paths for mauth. We will use the paths defined by GNUInstallDirs. If
+# the path is not absolute, we will preprend the install prefix. This ensures
+# most compatibility with dpkg and non-dpkg installations.
+include(GNUInstallDirs)
+
+set (MAUTH_CONFIG_DIR "${CMAKE_INSTALL_SYSCONFDIR}/mauth")
+if (NOT IS_ABSOLUTE ${MAUTH_CONFIG_DIR})
+	set (MAUTH_CONFIG_DIR "${CMAKE_INSTALL_PREFIX}/${MAUTH_CONFIG_DIR}")
+endif ()
+
+message(STATUS "Predefined paths:")
+message(STATUS "  config: ${MAUTH_CONFIG_DIR}")
+
+
 # recurse into subdirectories
 add_subdirectory(keys)
