--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,9 @@
 	dh $@
 
 
+override_dh_auto_configure:
+	dh_auto_configure -- -DCMAKE_INSTALL_SYSCONFDIR=/etc
+
 .PHONY: override_dh_strip
 override_dh_strip:
 	dh_strip -pmauth-openssh --dbg-package=mauth-openssh-dbg
