Moved parts of mauth-keys into libmauth.
A separate library should help to share code for all mauth tools.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,5 +34,6 @@ message(STATUS "  config: ${MAUTH_CONFIG_DIR}")
 
 
 # recurse into subdirectories
+add_subdirectory(libmauth)
 add_subdirectory(keys)
 add_subdirectory(pam)
