--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "externals/CMake-codecov"]
 	path = externals/CMake-codecov
 	url = https://github.com/RWTH-ELP/CMake-codecov.git
+[submodule "externals/CMake-CChelper"]
+	path = externals/CMake-CChelper
+	url = https://github.com/alehaa/CMake-CChelper.git
